--- a/articles/cognitive-services/Content-Moderator/index.yml
+++ b/articles/cognitive-services/Content-Moderator/index.yml
@@ -1,7 +1,7 @@
 ### YamlMime:Landing
 
 title: Content Moderator documentation # < 60 chars
-summary: Learn how to use Content Moderator to check text, image, and video content for material that is potentially offensive, risky, or otherwise undesirable. # < 160 chars
+summary: The Azure Content Moderator API is a cognitive service that checks text, image, and video content for material that is potentially offensive, risky, or otherwise undesirable. When such material is found, the service applies appropriate labels (flags) to the content. Your app can then handle flagged content in order to comply with regulations or maintain the intended environment for users. # < 160 chars
 
 metadata:
   title: Content Moderator Documentation - Quickstarts, Tutorials, API Reference - Azure Cognitive Services  | Microsoft Docs # Required; page title displayed in search results. Include the brand. < 60 chars.
