--- a/articles/iot-central-pnp/toc.yml
+++ b/articles/iot-central-pnp/toc.yml
@@ -24,11 +24,11 @@
 - name: Tutorials
   items:
     - name: Build and manage a IoT device template
-      href: ../iot-central/core/tutorial-define-iot-device-type-pnp.md.md?toc=/azure/iot-central-pnp/toc.json&bc=/azure/iot-central-pnp/breadcrumb/toc.json
+      href: ../iot-central/core/tutorial-define-iot-device-type-pnp.md?toc=/azure/iot-central-pnp/toc.json&bc=/azure/iot-central-pnp/breadcrumb/toc.json
     - name: Connect a device
       href: ../iot-central/core/tutorial-connect-pnp-device-pnp.md?toc=/azure/iot-central-pnp/toc.json&bc=/azure/iot-central-pnp/breadcrumb/toc.json
     - name: Build and manage a IoT Edge device template
-      href: ../iot-central/core/tutorial-define-edge-device-type-pnp.md.md?toc=/azure/iot-central-pnp/toc.json&bc=/azure/iot-central-pnp/breadcrumb/toc.json
+      href: ../iot-central/core/tutorial-define-edge-device-type-pnp.md?toc=/azure/iot-central-pnp/toc.json&bc=/azure/iot-central-pnp/breadcrumb/toc.json
     - name: Connect an Edge device
       href: ../iot-central/core/tutorial-add-edge-as-leaf-device.md.md?toc=/azure/iot-central-pnp/toc.json&bc=/azure/iot-central-pnp/breadcrumb/toc.json
     - name: Transform
