--- a/articles/virtual-machines/linux/toc.yml
+++ b/articles/virtual-machines/linux/toc.yml
@@ -197,10 +197,12 @@
       items:
       - name: CLI
         href: spot-cli.md
+      - name: Portal
+        href: ../windows/spot-portal.md?toc=/azure/virtual-machines/linux/toc.json&bc=/azure/virtual-machines/linux/breadcrumb/toc.json
       - name: Template
         href: spot-template.md
       - name: Error codes
-        href: ../error-codes-spot.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
+        href: ../error-codes-spot.md?toc=/azure/virtual-machines/linux/toc.json&bc=/azure/virtual-machines/linux/breadcrumb/toc.json
   - name: Secure VMs
     items:
     - name: Recommendations
