fixed .md filename issue

--- a/articles/iot-central-pnp/toc.yml
+++ b/articles/iot-central-pnp/toc.yml
@@ -30,7 +30,7 @@
     - name: Build and manage a IoT Edge device template
       href: ../iot-central/core/tutorial-define-edge-device-type-pnp.md?toc=/azure/iot-central-pnp/toc.json&bc=/azure/iot-central-pnp/breadcrumb/toc.json
     - name: Connect an Edge device
-      href: ../iot-central/core/tutorial-add-edge-as-leaf-device.md.md?toc=/azure/iot-central-pnp/toc.json&bc=/azure/iot-central-pnp/breadcrumb/toc.json
+      href: ../iot-central/core/tutorial-add-edge-as-leaf-device.md?toc=/azure/iot-central-pnp/toc.json&bc=/azure/iot-central-pnp/breadcrumb/toc.json
     - name: Transform
       items:
         - name: Create a rule
