--- a/articles/event-grid/edge/toc.yml
+++ b/articles/event-grid/edge/toc.yml
@@ -48,6 +48,8 @@
     href: configure-webhook-subscriber-auth.md  
   - name: Configure identity authentication
     href: configure-identity-auth.md
+  - name: Troubleshoot
+    href: troubleshoot.md    
 - name: Reference
   items:
   - name: REST API
