--- a/articles/synapse-analytics/toc.yml
+++ b/articles/synapse-analytics/toc.yml
@@ -70,8 +70,8 @@
     items:
     # - name: SQL Analytics pool
     #   href: article-template.md
-    # - name: SQL Analytics on-demand
-    #   href: article-template.md
+    - name: SQL Analytics on-demand
+      href: ../synapse-analytics/sql-analytics/sql-analytics-on-demand-workspace-overview.md?toc=/azure/synapse-analytics/toc.json&bc=/azure/synapse-analytics/breadcrumb/toc.json
     # - name: Spark pool template
     #   href: article-template.md
   - name: Pipeline and activity
