--- a/articles/iot-central/retail/breadcrumb/toc.yml
+++ b/articles/iot-central/retail/breadcrumb/toc.yml
@@ -2,10 +2,14 @@
   tocHref: /azure
   topicHref: /azure/index
   items: 
-  - name: Azure IoT Central
-    tocHref: /azure/iot-central/
-    topicHref: /azure/iot-central/index
+  - name: Internet of Things
+    tocHref: /azure/iot-fundamentals/
+    topicHref: /azure/iot-fundamentals/index
     items: 
-    - name: IoT Central for Retail 
-      tocHref: /azure/iot-central/retail
-      topicHref: /azure/iot-central/retail/index
+    - name: IoT Central
+      tocHref: /azure/iot-central/
+      topicHref: /azure/iot-central/
+      items:
+      - name: IoT Central for Retail
+        tocHref: /azure/iot-central/
+        topicHref: /azure/iot-central/retail/index/
