--- a/articles/synapse-analytics/toc.yml
+++ b/articles/synapse-analytics/toc.yml
@@ -351,7 +351,11 @@
       - name: Labels
         href: ../sql-data-warehouse/sql-data-warehouse-develop-label.md?toc=/azure/synapse-analytics/toc.json&bc=/azure/synapse-analytics/breadcrumb/toc.json
       - name: Storage files
-        href: ../synapse-analytics/sql-analytics/querying-storage-files.md?toc=/azure/synapse-analytics/toc.json&bc=/azure/synapse-analytics/breadcrumb/toc.json
+        items:
+        - name: Overview
+          href: ../synapse-analytics/sql-analytics/development-storage-files-overview.md?toc=/azure/synapse-analytics/toc.json&bc=/azure/synapse-analytics/breadcrumb/toc.json
+        - name: Storage Access Control
+          href: ../synapse-analytics/sql-analytics/development-storage-files-storage-access-control.md?toc=/azure/synapse-analytics/toc.json&bc=/azure/synapse-analytics/breadcrumb/toc.json
     - name: Workload management
       items:
       - name: Resource classes & workload management
