--- a/articles/synapse-analytics/toc.yml
+++ b/articles/synapse-analytics/toc.yml
@@ -513,7 +513,7 @@
       - name: Query data in storage
         items:
         - name: Overview - Query data in storage
-          href: query-data-in-storage.md
+          href: ../synapse-analytics/sql-analytics/query-data-in-storage.md?toc=/azure/synapse-analytics/toc.json&bc=/azure/synapse-analytics/breadcrumb/toc.json
         - name: Querying single CSV file
           href: ../synapse-analytics/sql-analytics/querying-single-csv-file.md?toc=/azure/synapse-analytics/toc.json&bc=/azure/synapse-analytics/breadcrumb/toc.json
         - name: Querying folders and multiple CSV files
