--- a/articles/industry/agriculture/toc.yml
+++ b/articles/industry/agriculture/toc.yml
@@ -5,9 +5,9 @@
 - name: Tutorials
   expanded: true
   items:
-   - name: Generate Soil Moisture Map
+   - name: Generate soil moisture map
      href: generate-soil-moisture-map.md
-   - name: Ingest Historical Telemetry Data
+   - name: Ingest historical telemetry data
      href: ingest-historical-telemetry-data.md
 - name: Concepts
   items:
@@ -15,39 +15,29 @@
      href: architecture-of-farmbeats.md
    - name: Sensor partner integration
      href: sensor-partner-integration.md
-<<<<<<< HEAD
    - name: Imagery partner integration
      href: imagery-partner-integration.md
 - name: How to Guides
-=======
-- name: How-to guides
->>>>>>> 3c55119e1720690357dd0ea59afb451bfc331f47
   items:
    - name: Deploy FarmBeats
      href: prepare-for-deployment.md
-   - name: Manage Farms
+   - name: Manage farms
      href: manage-farms.md
-   - name: Get Sensor Data
+   - name: Get sensor data
      href: get-sensor-data-from-sensor-partner.md
-   - name: Generate Maps
+   - name: Generate maps
      href: generate-maps.md
-   - name: Configure rules and alerts
+   - name: Configure rules and rlerts
      href: configure-rules-and-alerts.md
    - name: Get drone imagery
      href: get-drone-imagery.md
 - name: Troubleshoot
   items:
-   - name: Troubleshoote farmbeats
+   - name: Troubleshoote Farmbeats
      href: troubleshoot-project-farmbeats.md
 - name: Reference
-<<<<<<< HEAD
   items:
   href: references-for-farmbeats.md
 - name: Resources
   items:
   href: resources-for-farmbeats.md
-=======
-  href: references-for-farm-beats.md
-- name: Resources
-  href: resources-for-farm-beats.md
->>>>>>> 3c55119e1720690357dd0ea59afb451bfc331f47
