--- a/articles/iot-central/healthcare/toc.yml
+++ b/articles/iot-central/healthcare/toc.yml
@@ -6,8 +6,6 @@
       href: overview-iot-central-healthcare.md
 - name: Tutorials
   items:
-  - name : In-store analytics checkout
-    items:
     - name: Create a continuous patient monitoring app
       href: tutorial-continuous-patient-monitoring.md
         
@@ -119,3 +117,7 @@
       href: ../core/iot-central-supported-browsers.md?toc=/azure/iot-central/healthcare/toc.json&bc=/azure/iot-central/healthcare/breadcrumb/toc.json
     - name: API reference documentation
       href: https://go.microsoft.com/fwlink/?linkid=2109131
+    - name: Azure API for FHIR
+      href: https://docs.microsoft.com/azure/healthcare-apis/
+    - name: Designing secure health solutions
+      href: https://docs.microsoft.com/azure/security/fundamentals/health-care-solution 
