--- a/articles/vpn-gateway/TOC.yml
+++ b/articles/vpn-gateway/TOC.yml
@@ -217,7 +217,7 @@
         href: vpn-gateway-troubleshoot-vpn-point-to-site-connection-problems.md
       - name: Point-to-Site connection problems - Mac OS X VPN client
         href: vpn-gateway-troubleshoot-point-to-site-osx-ikev2.md
-      - name: Point-to-Site - Azure AD authentication connections
+      - name: Point-to-Site - Azure AD authentication
         href: troubleshoot-ad-vpn-client.md
     - name: Site-to-Site connection issues
       items:
