--- a/articles/iot-central/core/TOC.yml
+++ b/articles/iot-central/core/TOC.yml
@@ -52,7 +52,7 @@
       - name: Prepare and connect a SensorTile.box device
         href: howto-connect-sensortile.md
       - name: Prepare and connect a RuuviTag device
-        href: howto-connect-ruuvi-pnp.md
+        href: howto-connect-ruuvi-pnp.md?toc=/azure/iot-central/energy/toc.json&bc=/azure/iot-central/energy/breadcrumb/toc.json
       - name: Monitor device connectivity using command line
         href: howto-use-iotc-explorer.md
   - name: Manage devices
