--- a/articles/virtual-machines/linux/toc.yml
+++ b/articles/virtual-machines/linux/toc.yml
@@ -135,6 +135,8 @@
       href: disks-types.md
     - name: Designing for high performance
       href: premium-storage-performance.md
+    - name: Disk bursting
+      href: disk-bursting.md
     - name: Scalability targets for disks
       href: disk-scalability-targets.md
     - name: Backup and disaster recovery for disks
